Feat: Added new Header for Control Unit.

--- a/Byte Modular Architecture Simulator/Byte Modular Architecture Simulator.vcxproj
+++ b/Byte Modular Architecture Simulator/Byte Modular Architecture Simulator.vcxproj
@@ -124,6 +124,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="ALU.hpp" />
+    <ClInclude Include="ControlUnit.hpp" />
     <ClInclude Include="MainMemory.hpp" />
   </ItemGroup>
   <ItemGroup>
