Feat: Started Control Unit Main Code/

--- a/Byte Modular Architecture Simulator/Byte Modular Architecture Simulator.vcxproj
+++ b/Byte Modular Architecture Simulator/Byte Modular Architecture Simulator.vcxproj
@@ -129,6 +129,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ALU.cpp" />
+    <ClCompile Include="ControlUnit.cpp" />
     <ClCompile Include="EntrancePoint.cpp" />
     <ClCompile Include="MainMemory.cpp" />
     <ClCompile Include="RegisterFile.cpp" />
