--- a/Byte Modular Architecture Simulator/Byte Modular Architecture Simulator.vcxproj.filters
+++ b/Byte Modular Architecture Simulator/Byte Modular Architecture Simulator.vcxproj.filters
@@ -41,5 +41,8 @@
     <ClCompile Include="ALU.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ControlUnit.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
