--- a/Byte Modular Architecture Simulator/Byte Modular Architecture Simulator.vcxproj
+++ b/Byte Modular Architecture Simulator/Byte Modular Architecture Simulator.vcxproj
@@ -134,6 +134,7 @@
     <ClCompile Include="MainMemory.cpp" />
     <ClCompile Include="RegisterFile.cpp" />
     <ClCompile Include="RegisterFile.hpp" />
+    <ClCompile Include="SingleCycleCPU.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
