Feat: Implemented start of Single Cycle CPU File.

--- a/Byte Modular Architecture Simulator/Byte Modular Architecture Simulator.vcxproj.filters
+++ b/Byte Modular Architecture Simulator/Byte Modular Architecture Simulator.vcxproj.filters
@@ -47,5 +47,8 @@
     <ClCompile Include="SingleCycleCPU.hpp">
       <Filter>Header Files</Filter>
     </ClCompile>
+    <ClCompile Include="SingleCycleCPU.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
