--- a/Byte Modular Architecture Simulator/Byte Modular Architecture Simulator.vcxproj
+++ b/Byte Modular Architecture Simulator/Byte Modular Architecture Simulator.vcxproj
@@ -124,18 +124,20 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="ALU.hpp" />
+    <ClInclude Include="Assembler.hpp" />
     <ClInclude Include="ControlUnit.hpp" />
     <ClInclude Include="MainMemory.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ALU.cpp" />
+    <ClCompile Include="Assembler.cpp" />
     <ClCompile Include="ControlUnit.cpp" />
     <ClCompile Include="EntrancePoint.cpp" />
     <ClCompile Include="MainMemory.cpp" />
     <ClCompile Include="RegisterFile.cpp" />
     <ClCompile Include="RegisterFile.hpp" />
-    <ClCompile Include="SingleCycleCPU.cpp" />
-    <ClCompile Include="SingleCycleCPU.hpp" />
+    <ClCompile Include="CPU.cpp" />
+    <ClCompile Include="CPU.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
